@@ -48,8 +48,8 @@ public class ReviewService {
         if (reviewDTO.getTags() != null) {
             Review finalReview = review;
             List<Tag> tags = reviewDTO.getTags().stream()
-                    .map(tagValue -> new Tag(finalReview, tagValue))
-                    .collect(Collectors.toList());
+                    .map(tagValue -> new Tag(finalReview, TagValue.fromString(tagValue)))
+                            .collect(Collectors.toList());
             tagRepository.saveAll(tags);
         }
 
@@ -69,7 +69,7 @@ public class ReviewService {
 
         if (reviewDTO.getTags() != null) {
             List<Tag> newTags = reviewDTO.getTags().stream()
-                    .map(tagValue -> new Tag(updatedReview, tagValue))
+                    .map(tagValue -> new Tag(updatedReview, TagValue.fromString(tagValue)))
                     .collect(Collectors.toList());
             tagRepository.saveAll(newTags);
         }
@@ -106,8 +106,8 @@ public class ReviewService {
         List<TagValue> tags = tagRepository.findByReviewReviewId(review.getReviewId())
                 .stream()
                 .map(Tag::getTagValue)
-                .collect(Collectors.toList());
-        dto.setTags(tags);
+                .toList();
+        dto.setTags(tags.stream().map(TagValue::getValue).collect(Collectors.toList()));
 
         return dto;
     }
